# stratum

./: Cargo.toml  README.md
docs/: BUILD_LINUX.md  BUILD_WINDOWS.md  DEPLOYMENT.md  INSTALL_FROM_BINARY.md  RELEASE_DOWNLOAD_0.0.1-beta.md
scripts/: build-linux.sh  build-windows.cmd  run-stratum.cmd  run-stratum.ps1  run-stratum.sh
src/: main.rs
