[package]
name = "duta-stratumd"
version = "0.0.1-beta"
edition = "2021"
license = "MIT"
authors = ["dutago"]
description = "Public DUTA stratum server for job distribution and share handling."
homepage = "https://dutago.xyz"
readme = "README.md"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
hex = "0.4"
clap = { version = "4", features = ["derive"] }
once_cell = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
duta-core = { path = "../dutad/core" }
time = { version = "0.3", features = ["formatting", "local-offset"] }

[workspace]
